Apply spotless